Fix Java 8 / Java 11 compatibility